{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 230,
  "lineage": "0a2af4eb-4611-b561-888d-4d8189247bd4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform-demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02b49a24cfb95941c",
            "arn": "arn:aws:ec2:ap-south-1:077816701444:instance/i-08673fd98fbaef80b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "CloudWatchAgentInstanceProfile",
            "id": "i-08673fd98fbaef80b",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-044e74edf652f6560",
            "private_dns": "ip-172-31-3-22.ap-south-1.compute.internal",
            "private_ip": "172.31.3.22",
            "public_dns": "ec2-3-110-44-103.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.110.44.103",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "volume_id": "vol-0ec598c06f4644eed",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "web_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fd03fe111484e590",
            "tags": {
              "Name": "Self-Healing-EC2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05bbcc82905600b6c"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_cloudwatch_instance_profile",
            "aws_iam_role.ec2_cloudwatch_role",
            "aws_security_group.web_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "aws_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:077816701444:loadbalancer/app/aws-lb/c268a3f32496246e",
            "arn_suffix": "app/aws-lb/c268a3f32496246e",
            "dns_name": "aws-lb-249058772.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:077816701444:loadbalancer/app/aws-lb/c268a3f32496246e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "aws-lb",
            "security_groups": [
              "sg-05bbcc82905600b6c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00234091c9aa672f8"
              },
              {
                "subnet_id": "subnet-0fd03fe111484e590"
              }
            ],
            "subnets": [
              "subnet-00234091c9aa672f8",
              "subnet-0fd03fe111484e590"
            ],
            "vpc_id": "vpc-0f14bc78ff630bd2d",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.web_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:077816701444:listener/app/aws-lb/c268a3f32496246e/def7bd08ed26354c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:077816701444:targetgroup/app-tg/94f68a228d386f34",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:077816701444:listener/app/aws-lb/c268a3f32496246e/def7bd08ed26354c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:077816701444:loadbalancer/app/aws-lb/c268a3f32496246e",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.aws_lb",
            "aws_lb_target_group.app_tg",
            "aws_security_group.web_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:077816701444:targetgroup/app-tg/94f68a228d386f34",
            "arn_suffix": "targetgroup/app-tg/94f68a228d386f34",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:077816701444:targetgroup/app-tg/94f68a228d386f34",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "app-tg",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f14bc78ff630bd2d"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:077816701444:security-group/sg-05bbcc82905600b6c",
            "description": "Allow SSH and HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05bbcc82905600b6c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web_sg",
            "name_prefix": "",
            "owner_id": "077816701444",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0f14bc78ff630bd2d"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    }
  ]
}